--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ button:disabled {
 <body>
 
 <div class="card">
-  <h2>Terms & Agreement</h2>
+  <h2>Terms & Agreement 2</h2>
   <p class="instruction">Please read the highlighted section aloud. Words you read will be highlighted in real-time.</p>
 
   <div class="read-zone" id="readZone"></div>
@@ -158,3 +158,4 @@ startBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
