--- a/index.html
+++ b/index.html
@@ -42,11 +42,12 @@ h2 {
   padding: 2px 0;
   margin: 0 2px;
   display: inline-block;
+  background-color: #f0f0f0; /* not-read default color */
+  border-radius: 3px;
 }
 
 .word.read {
-  background-color: #ffd966;
-  border-radius: 3px;
+  background-color: #ffd966; /* yellow for read words */
 }
 
 button {
@@ -76,7 +77,7 @@ button:disabled {
 <body>
 
 <div class="card">
-  <h2>Terms & Agreement 2</h2>
+  <h2>Terms & Agreement</h2>
   <p class="instruction">Please read the highlighted section aloud. Words you read will be highlighted in real-time.</p>
 
   <div class="read-zone" id="readZone"></div>
@@ -99,7 +100,7 @@ const words = text.split(" ");
 words.forEach((word, i) => {
   const span = document.createElement("span");
   span.textContent = word + " ";
-  span.className = "word";
+  span.className = "word";  // all words start as light gray (not-read)
   span.id = "word-" + i;
   readZone.appendChild(span);
 });
@@ -158,4 +159,3 @@ startBtn.addEventListener("click", () => {
 
 </body>
 </html>
-
