--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@ h2 {
 .read-zone {
   margin: 15px 0;
   padding: 15px;
-  background: #fff7cc;
+  background: #ffffff; /* neutral container */
   border-left: 4px solid #ffb700;
   border-radius: 6px;
 }
 
 .word {
-  padding: 2px 0;
+  padding: 2px 2px;
   margin: 0 2px;
   display: inline-block;
-  background-color: #f0f0f0; /* not-read default color */
+  background-color: #f0f0f0; /* light gray for not-read */
   border-radius: 3px;
 }
 
@@ -77,7 +77,7 @@ button:disabled {
 <body>
 
 <div class="card">
-  <h2>Terms & Agreement 3</h2>
+  <h2>Terms & Agreement 4</h2>
   <p class="instruction">Please read the highlighted section aloud. Words you read will be highlighted in real-time.</p>
 
   <div class="read-zone" id="readZone"></div>
@@ -100,7 +100,7 @@ const words = text.split(" ");
 words.forEach((word, i) => {
   const span = document.createElement("span");
   span.textContent = word + " ";
-  span.className = "word";  // all words start as light gray (not-read)
+  span.className = "word";  // light gray initially
   span.id = "word-" + i;
   readZone.appendChild(span);
 });
@@ -127,20 +127,25 @@ startBtn.addEventListener("click", () => {
   recognition.lang = 'en-US';
 
   recognition.onresult = (event) => {
+    // Combine all interim and final results
     const transcript = Array.from(event.results)
       .map(r => r[0].transcript)
       .join(" ")
-      .toLowerCase();
+      .toLowerCase()
+      .replace(/[^a-zA-Z ]/g, ""); // remove punctuation
+
+    const spokenWords = transcript.split(/\s+/);
 
     // Highlight words that match
     words.forEach((word, i) => {
+      const cleanWord = word.replace(/[^a-zA-Z]/g, "").toLowerCase();
       const span = document.getElementById("word-" + i);
-      if (transcript.includes(word.replace(/[^a-zA-Z]/g, "").toLowerCase())) {
+      if (spokenWords.includes(cleanWord)) {
         span.classList.add("read");
       }
     });
 
-    // If all words are read, unlock checkbox
+    // Unlock checkbox when all words are read
     const allRead = words.every((_, i) => document.getElementById("word-" + i).classList.contains("read"));
     if (allRead) {
       checkbox.disabled = false;
@@ -159,4 +164,3 @@ startBtn.addEventListener("click", () => {
 
 </body>
 </html>
-
